--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,24 @@
 Django==1.9.4
+celery
 gunicorn==19.6.0
 sklearn
 pandas
 geocoder
+selenium
 gmplot
 numpy
 fpdf
-#selenium
+selenium
 scipy
 xlrd
 openpyxl
-google-api-python-client
+google-api-python-client==1.6.5
 httplib2
-googleapiclient
-oauth2client==1.5.2
+oauth2client==4.1.2
+pyvirtualdisplay
+google-auth
+google-auth-httplib2 
+sqlalchemy
+django-mysql
+MySQLdb
 
