--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 Django==1.9.4
-celery
+celery<4.3
 gunicorn==19.6.0
 sklearn
 pandas
 geocoder
+censusgeocode
+ortools<7.0
 selenium
 gmplot
 numpy
@@ -17,8 +19,13 @@ httplib2
 oauth2client==4.1.2
 pyvirtualdisplay
 google-auth
-google-auth-httplib2 
+google-auth-httplib2
+pyzillow
 sqlalchemy
-django-mysql
-MySQLdb
+django-mysql<2.5
+pymysql
+
+# Install libmysqlclient-dev first
+MySQL-python
+#MySQLdb
 
